--- a/.env
+++ b/.env
@@ -6,16 +6,16 @@ GAS_INITIAL_PRICE=30000000000
 GAS_REQUEST_TIMEOUT_MS=10000
 GAS_PRICE_ADDITION=1
 
-# Solo Liquidations
-SOLO_LIQUIDATIONS_ENABLED=true
-SOLO_EXPIRATIONS_ENABLED=false
-SOLO_COLLATERAL_PREFERENCES=0,3,2
-SOLO_OWED_PREFERENCES=0,3,2
-SOLO_EXPIRED_ACCOUNT_DELAY_SECONDS=3600
-SOLO_MIN_ACCOUNT_COLLATERALIZATION=0.5
-SOLO_MIN_OVERHEAD_VALUE=100e36
-SOLO_ACCOUNT_NUMBER=0
-SOLO_LIQUIDATE_POLL_INTERVAL_MS=5000
+# Dolomite Liquidations
+DOLOMITE_LIQUIDATIONS_ENABLED=true
+DOLOMITE_EXPIRATIONS_ENABLED=false
+DOLOMITE_COLLATERAL_PREFERENCES=0,3,2
+DOLOMITE_OWED_PREFERENCES=0,3,2
+DOLOMITE_EXPIRED_ACCOUNT_DELAY_SECONDS=3600
+DOLOMITE_MIN_ACCOUNT_COLLATERALIZATION=0.5
+DOLOMITE_MIN_OVERHEAD_VALUE=100e36
+DOLOMITE_ACCOUNT_NUMBER=0
+DOLOMITE_LIQUIDATE_POLL_INTERVAL_MS=5000
 
 # Global Settings
 DYDX_URL=https://api.dydx.exchange
