got tests working initially. Need to migrate API server being hit

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,6 @@
+ETHEREUM_NODE_URL="https://rpc-mumbai.matic.today"
+NETWORK_ID=80001
+
 DOLOMITE_LIQUIDATIONS_ENABLED=true
 DOLOMITE_EXPIRATIONS_ENABLED=true
 
