Started fixing queries

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ GAS_PRICE_ADDITION=1
 
 # Dolomite Liquidations
 DOLOMITE_LIQUIDATIONS_ENABLED=true
-DOLOMITE_EXPIRATIONS_ENABLED=false
+DOLOMITE_EXPIRATIONS_ENABLED=true
 DOLOMITE_COLLATERAL_PREFERENCES=0,3,2
 DOLOMITE_OWED_PREFERENCES=0,3,2
 DOLOMITE_EXPIRED_ACCOUNT_DELAY_SECONDS=3600
@@ -18,9 +18,8 @@ DOLOMITE_ACCOUNT_NUMBER=0
 DOLOMITE_LIQUIDATE_POLL_INTERVAL_MS=5000
 
 # Global Settings
-DYDX_URL=https://api.dydx.exchange
-ETHEREUM_NODE_URL=https://mainnet.infura.io/v3/00000000000000000000000000000000
-NETWORK_ID=1
+SUBGRAPH_URL=https://api.studio.thegraph.com/query/2188/dolomite-v2-mumbai/v0.0.66
+NETWORK_ID=80001
 ACCOUNT_POLL_INTERVAL_MS=5000
 MARKET_POLL_INTERVAL_MS=5000
 LIQUIDATION_KEY_EXPIRATION_SEC=300
