Almost done with source code changes. xfer to other computer

--- a/.env
+++ b/.env
@@ -18,8 +18,9 @@ DOLOMITE_ACCOUNT_NUMBER=0
 DOLOMITE_LIQUIDATE_POLL_INTERVAL_MS=5000
 
 # Global Settings
-SUBGRAPH_URL=https://api.studio.thegraph.com/query/2188/dolomite-v2-mumbai/v0.0.66
+SUBGRAPH_URL=https://api.studio.thegraph.com/query/2188/dolomite-v2-mumbai/v0.0.67
 NETWORK_ID=80001
+BASE_CURRENCY_ADDRESS=0xa38eF095D071ebBAFeA5E7D1Ce02BE79fc376793
 ACCOUNT_POLL_INTERVAL_MS=5000
 MARKET_POLL_INTERVAL_MS=5000
 LIQUIDATION_KEY_EXPIRATION_SEC=300
