--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 ETHEREUM_NODE_URL="https://rpc-mumbai.matic.today"
 NETWORK_ID=80001
+BASE_CURRENCY_ADDRESS=0xa38eF095D071ebBAFeA5E7D1Ce02BE79fc376793
 
 DOLOMITE_LIQUIDATIONS_ENABLED=true
 DOLOMITE_EXPIRATIONS_ENABLED=true
