--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/dolomite-exchange/liquidator#readme",
   "dependencies": {
-    "@dolomite-exchange/v2-protocol": "^1.0.9",
+    "@dolomite-exchange/v2-protocol": "^1.0.10",
     "dotenv-flow": "^0.4.0",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^14.0.14",
+    "@types/node-fetch": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "coveralls": "^3.0.9",
@@ -43,13 +44,15 @@
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-airbnb-typescript": "^8.0.2",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "eslint-plugin-jest": "^22.21.0",
+    "install": "^0.13.0",
     "jest": "^26.3.0",
     "jest-junit": "^10.0.0",
     "nodemon": "^1.19.4",
+    "npm": "^8.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
     "typescript": "^3.8.3"
