started adding gql for risk params to make more efficient

--- a/.env
+++ b/.env
@@ -1,12 +1,15 @@
 # Gas Management
 GAS_STATION_URL=http://ethgasstation.info/json/ethgasAPI.json
-GAS_PRICE_MULTIPLIER=2
+GAS_PRICE_MULTIPLIER=1
 GAS_PRICE_UPDATE_FREQUENCY_SEC=120
-GAS_INITIAL_PRICE=30000000000
+GAS_INITIAL_PRICE=10000000000
 GAS_REQUEST_TIMEOUT_MS=10000
 GAS_PRICE_ADDITION=1
 
 # Dolomite Liquidations
+DOLOMITE_AUTO_SELL_COLLATERAL=true
+DOLOMITE_REVERT_ON_FAIL_TO_SELL_COLLATERAL=false
+DOLOMITE_BRIDGE_CURRENCY_ADDRESS="WETH ADDRESS"
 DOLOMITE_LIQUIDATIONS_ENABLED=true
 DOLOMITE_EXPIRATIONS_ENABLED=true
 DOLOMITE_COLLATERAL_PREFERENCES=0,3,2
