--- a/.env
+++ b/.env
@@ -26,4 +26,5 @@ NETWORK_ID=80001
 BASE_CURRENCY_ADDRESS=0xa38eF095D071ebBAFeA5E7D1Ce02BE79fc376793
 ACCOUNT_POLL_INTERVAL_MS=5000
 MARKET_POLL_INTERVAL_MS=5000
+RISK_PARAMS_POLL_INTERVAL_MS=5000
 LIQUIDATION_KEY_EXPIRATION_SEC=300
