--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ GAS_PRICE_ADDITION=1
 # Dolomite Liquidations
 DOLOMITE_AUTO_SELL_COLLATERAL=true
 DOLOMITE_REVERT_ON_FAIL_TO_SELL_COLLATERAL=false
-DOLOMITE_BRIDGE_CURRENCY_ADDRESS="WETH ADDRESS"
+DOLOMITE_BRIDGE_CURRENCY_ADDRESS=WETH_ADDRESS
 DOLOMITE_LIQUIDATIONS_ENABLED=true
 DOLOMITE_EXPIRATIONS_ENABLED=true
 DOLOMITE_COLLATERAL_PREFERENCES=0,3,2
