finished bot initially

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 # Gas Management
-GAS_STATION_URL=http://ethgasstation.info/json/ethgasAPI.json
 GAS_PRICE_MULTIPLIER=1
 GAS_PRICE_UPDATE_FREQUENCY_SEC=120
 GAS_INITIAL_PRICE=10000000000
@@ -21,10 +20,10 @@ DOLOMITE_ACCOUNT_NUMBER=0
 DOLOMITE_LIQUIDATE_POLL_INTERVAL_MS=5000
 
 # Global Settings
-SUBGRAPH_URL=https://api.studio.thegraph.com/query/2188/dolomite-v2-mumbai/v0.0.67
+SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/dolomite-exchange/dolomite-v2-mumbai
 NETWORK_ID=80001
 BASE_CURRENCY_ADDRESS=0xa38eF095D071ebBAFeA5E7D1Ce02BE79fc376793
 ACCOUNT_POLL_INTERVAL_MS=5000
 MARKET_POLL_INTERVAL_MS=5000
 RISK_PARAMS_POLL_INTERVAL_MS=5000
-LIQUIDATION_KEY_EXPIRATION_SEC=300
+LIQUIDATION_KEY_EXPIRATION_SEC=120
