extracted more settings

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ GAS_PRICE_ADDITION=1
 # Dolomite Liquidations
 DOLOMITE_AUTO_SELL_COLLATERAL=true
 DOLOMITE_REVERT_ON_FAIL_TO_SELL_COLLATERAL=false
+DOLOMITE_MIN_OWED_OUTPUT_AMOUNT_DISCOUNT=0.10
 DOLOMITE_BRIDGE_CURRENCY_ADDRESS=WETH_ADDRESS
 DOLOMITE_LIQUIDATIONS_ENABLED=true
 DOLOMITE_EXPIRATIONS_ENABLED=true
