--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test jest --runInBand",
     "coverage": "NODE_ENV=test jest --coverage --runInBand --forceExit --coverageReporters=text-lcov | node_modules/.bin/coveralls",
-    "build": "rm -rf build/ && tsc",
+    "build": "rm -rf build/ && node_modules/.bin/tsc",
     "start": "node build/src/index.js",
     "lint": "eslint . --ext .js --ignore-path .gitignore",
     "compose-clean": "docker-compose rm -f",
@@ -29,7 +29,7 @@
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
     "luxon": "^1.25.0",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "^2.6.7",
     "request-promise-native": "^1.0.9",
     "winston": "^3.2.1",
     "winston-transport": "^4.3.0"
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^14.0.14",
-    "@types/node-fetch": "^3.0.3",
+    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "coveralls": "^3.0.9",
