--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@dolomite-exchange/dolomite-margin": "^0.2.0",
     "dotenv-flow": "^0.4.0",
+    "ethers": "^5.5.3",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
     "luxon": "^1.25.0",
