--- a/package.json
+++ b/package.json
@@ -15,23 +15,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dolomite-exchange/liquidator.git"
+    "url": "git+https://github.com/dolomite-exchange/fringe-liquidator.git"
   },
   "author": "Dolomite",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/dolomite-exchange/liquidator/issues"
+    "url": "https://github.com/dolomite-exchange/fringe-liquidator/issues"
   },
-  "homepage": "https://github.com/dolomite-exchange/liquidator#readme",
+  "homepage": "https://github.com/dolomite-exchange/fringe-liquidator#readme",
   "dependencies": {
-    "@dolomite-exchange/dolomite-margin": "^0.8.0",
+    "bignumber.js": "^9.0.2",
     "dotenv-flow": "^0.4.0",
     "ethers": "^5.5.3",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
     "luxon": "^1.25.0",
     "node-fetch": "^2.6.7",
-    "request-promise-native": "^1.0.9",
     "winston": "^3.2.1",
     "winston-transport": "^4.3.0"
   },
