cleaned up some compilation errors

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ INITIAL_GAS_PRICE_WEI=10000000000
 LIQUIDATE_POLL_INTERVAL_MS=5000
 LIQUIDATION_KEY_EXPIRATION_SECONDS=120
 LIQUIDATIONS_ENABLED=true
+PRICE_POLL_INTERVAL_MS=15000
