fixed up gas price info and liquidation store

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test jest --runInBand",
     "coverage": "NODE_ENV=test jest --coverage --runInBand --forceExit --coverageReporters=text-lcov | node_modules/.bin/coveralls",
     "build": "rm -rf build/ && node_modules/.bin/tsc",
-    "start": "node build/src/index.js",
+    "start-old": "node build/src/index.js",
+    "start": "ts-node --project tsconfig.json src/index.ts",
     "lint": "eslint . --ext .js --ignore-path .gitignore",
     "compose-clean": "docker-compose rm -f",
     "migrate": "echo 'Nothing to migrate'",
@@ -31,6 +32,7 @@
     "lru-cache": "^5.1.1",
     "luxon": "^1.25.0",
     "node-fetch": "^2.6.7",
+    "ts-node": "^10.7.0",
     "winston": "^3.2.1",
     "winston-transport": "^4.3.0"
   },
